added creation of session
